// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CompanyTaxField/> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="company_tax_id"
      >
        NIP firmy
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos hKnQgj"
          id="testId"
          label="NIP firmy"
          name="company_tax_id"
          placeholder="NIP firmy"
          value="948167873"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        Podany NIP jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<CompanyTaxField/> matches snapshot 1`] = `
<input
  class="sc-hBEYos RGiG"
  id="testId"
  label="NIP firmy"
  name="company_tax_id"
  placeholder="NIP firmy"
  value=""
/>
`;

exports[`<CompanyTaxField/> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="company_tax_id"
      >
        CompanyTax*
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos hKnQgj"
          id="testId"
          label="CompanyTax"
          name="company_tax_id"
          placeholder="NIP firmy*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<CompanyTaxField/> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="company_tax_id"
      >
        Company Tax
      </label>
      <div
        class="sc-lmoMRL kywwk"
      >
        <input
          class="sc-hBEYos RGiG"
          id="testId"
          label="Company Tax"
          name="company_tax_id"
          placeholder="NIP firmy"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
